--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       ],
       "moduleResolution": "node",
       "noEmit": true,
-      "strict": true,
+      "strict": false,
       "target": "esnext"
     },
     "exclude": [
